# libipatool-go

./: .gitignore  CMakeLists.txt  main.go
cmd/: auth.go  common.go  download.go  get_version_metadata.go  list_versions.go  purchase.go  root.go  search.go
pkg/appstore/: account.go  appstore_download.go
pkg/http/: client.go
